<resources>
    <string name="app_name">Lab</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="graph">sysugraph</string>
    <string name="sid">学号：</string>
    <string name="hint1">请输入学号</string>
    <string name="skey">密码：</string>
    <string name="hint2">请输入密码</string>
    <string name="student1">学生</string>
    <string name="staff">教职工</string>
    <string name="button1">登录</string>
    <string name="button2">注册</string>
</resources>
