<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="364dp" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp"
        tools:layout_editor_absoluteY="491dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/sysu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/graph"
        android:src="@mipmap/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/EID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:hint="@string/hint1"
            android:inputType="number"
            app:layout_constraintLeft_toRightOf="@+id/TID"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/sysu"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            />

    <TextView
        android:id="@+id/TID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sid"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/EID"
        app:layout_constraintRight_toLeftOf="@+id/EID"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />


    <EditText
        android:id="@+id/key2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:hint="@string/hint2"
        android:inputType="textPassword"
        app:layout_constraintLeft_toRightOf="@+id/key1"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/EID"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/key1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skey"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/key2"
        app:layout_constraintTop_toTopOf="@+id/key2"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <RadioGroup
        android:id="@+id/RG0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key2"
        android:layout_marginTop="20dp">
        <RadioButton
            android:id="@+id/RG1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/student1"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/RG2"
            android:onClick="clickRB1"/>
        <RadioButton
            android:id="@+id/RG2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/RG1"
            android:layout_marginStart="10dp"
            android:onClick="clickRB2"/>
    </RadioGroup>


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:background="@drawable/shape"
        android:textColor="@color/colorBText"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/RG0"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:background="@drawable/shape"
        android:textSize="18sp"
        android:textColor="@color/colorBText"
        app:layout_constraintTop_toBottomOf="@+id/RG0"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        />
</android.support.constraint.ConstraintLayout>

